ZGC and G1GC profiling v1